--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js",
     "dev": "nodemon main.js",
-    "build": "npm install"
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
